--- a/ITd_bonus2_oL(1).ipynb
+++ b/ITd_bonus2_oL(1).ipynb
@@ -1,1 +1,365 @@
-{"cells":[{"metadata":{"slideshow":{"slide_type":"-"}},"cell_type":"markdown","source":"1) Weise das erste und letzt Element von *t* jeweils neu zu. Prüfe beide Objekte auf Gleichheit."},{"metadata":{"trusted":false},"cell_type":"code","source":"t = \"drill\"","execution_count":4,"outputs":[]},{"metadata":{"trusted":false},"cell_type":"code","source":"z = t[0]\ny = t[-1]\nprint (z,y)\nz == y","execution_count":10,"outputs":[{"output_type":"stream","text":"d l\n","name":"stdout"},{"output_type":"execute_result","execution_count":10,"data":{"text/plain":"False"},"metadata":{}}]},{"metadata":{},"cell_type":"markdown","source":"2) Wieviele Ebenen hat diese Liste? Von was für einer Art von Liste spricht man hier im Englischen?"},{"metadata":{"trusted":true},"cell_type":"code","source":"L = [[[1,2],[3,4]],5]","execution_count":1,"outputs":[]},{"metadata":{"trusted":true},"cell_type":"code","source":"#3 Ebenen  -------- nested list","execution_count":4,"outputs":[]},{"metadata":{"trusted":true},"cell_type":"code","source":"L [0][1][1]","execution_count":3,"outputs":[{"output_type":"execute_result","execution_count":3,"data":{"text/plain":"4"},"metadata":{}}]},{"metadata":{},"cell_type":"markdown","source":"3) Ändere *w1*, *w2*, *w3* und *w4* so, dass *world* mit einem Großbuchstaben beginnt. Nutze dafür die Funktion *replace()*."},{"metadata":{"trusted":true},"cell_type":"code","source":"w1 =  'Hello world'\nw2 =  ['Hello', 'world']\nw3 = ['Hello, world']\nw4 = 'Hello wide world'\nw4 = w4.replace (w4[-5], \"W\")\nprint (w4)","execution_count":43,"outputs":[{"output_type":"stream","text":"Hello Wide World\n","name":"stdout"}]},{"metadata":{"trusted":true},"cell_type":"code","source":"w1 = w1.replace (\"w\", \"W\")\nw2[1].replace (\"w\",\"W\")\n","execution_count":37,"outputs":[{"output_type":"execute_result","execution_count":37,"data":{"text/plain":"'World'"},"metadata":{}}]},{"metadata":{"trusted":true},"cell_type":"code","source":"w21 = (w2[0])\nw22 = (w2[1])\nw22 = w22.replace (\"w\",\"W\")\nprint (w21,w22)\ntype (w21)","execution_count":36,"outputs":[{"output_type":"stream","text":"Hello World\n","name":"stdout"},{"output_type":"execute_result","execution_count":36,"data":{"text/plain":"str"},"metadata":{}}]},{"metadata":{"trusted":true},"cell_type":"code","source":"w31 = w3[0]\nw3 = w31\ntype (w3)","execution_count":32,"outputs":[{"output_type":"execute_result","execution_count":32,"data":{"text/plain":"str"},"metadata":{}}]},{"metadata":{"trusted":true},"cell_type":"code","source":"w1 = w1.replace (\"w\", \"W\")\nw2 = w2[0],w2[1].replace (\"w\",\"W\")\nw3 = w3.replace (\"w\",\"W\")\nw4 = w4.replace (w4[-5], \"W\")\nprint (w4)","execution_count":42,"outputs":[{"output_type":"stream","text":"Hello Wide World\n","name":"stdout"}]},{"metadata":{},"cell_type":"markdown","source":"4) Ändere *w1*, *w2*, *w3* und *w4* so, dass *world* mit einem Großbuchstaben beginnt. Nutze dafür die Funktion *title()*."},{"metadata":{"trusted":false},"cell_type":"code","source":"w1 = 'Hello world'\nw2 = ['Hello', 'world']\nw3 = ['Hello, world']\nw4 = ['Hello', 'wide', 'world']","execution_count":null,"outputs":[]},{"metadata":{"trusted":false},"cell_type":"code","source":"","execution_count":null,"outputs":[]},{"metadata":{},"cell_type":"markdown","source":"5) Gebe die Liste *order* so aus, dass die Elemente als *python* zu lesen sind. Nutze dazu Indizierung."},{"metadata":{"trusted":false},"cell_type":"code","source":"order1 = ['p','x','y','x','t','x','h','x','o','x','n']\norder2 = ['x','p','x','y','x','t','x','h','x','o','x','n']\norder3 = ['n','x','o','x','h','x','t','x','y','x','p']\n#ergebnis = ['p','y','t','h','o','n']","execution_count":45,"outputs":[]},{"metadata":{"trusted":false},"cell_type":"code","source":"","execution_count":null,"outputs":[]},{"metadata":{"trusted":false},"cell_type":"code","source":"","execution_count":null,"outputs":[]},{"metadata":{"trusted":false},"cell_type":"code","source":"","execution_count":null,"outputs":[]}],"metadata":{"celltoolbar":"Slideshow","kernelspec":{"name":"python3","display_name":"Python 3","language":"python"},"language_info":{"name":"python","version":"3.7.6","mimetype":"text/x-python","codemirror_mode":{"name":"ipython","version":3},"pygments_lexer":"ipython3","nbconvert_exporter":"python","file_extension":".py"}},"nbformat":4,"nbformat_minor":1}
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "source": [
+    "1) Weise das erste und letzt Element von *t* jeweils neu zu. Prüfe beide Objekte auf Gleichheit."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t = \"drill\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "d l\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "z = t[0]\n",
+    "y = t[-1]\n",
+    "print (z,y)\n",
+    "z == y"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2) Wieviele Ebenen hat diese Liste? Von was für einer Art von Liste spricht man hier im Englischen?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "L = [[[1,2],[3,4]],5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#3 Ebenen  -------- nested list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "L [0][1][1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3) Ändere *w1*, *w2*, *w3* und *w4* so, dass *world* mit einem Großbuchstaben beginnt. Nutze dafür die Funktion *replace()*."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Wide World\n"
+     ]
+    }
+   ],
+   "source": [
+    "w1 =  'Hello world'\n",
+    "w2 =  ['Hello', 'world']\n",
+    "w3 = ['Hello, world']\n",
+    "w4 = 'Hello wide world'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'World'"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "w1 = w1.replace (\"w\", \"W\")\n",
+    "print (w1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "w2= w2[0], w2[1].replace (\"w\",\"W\")\n",
+    "print (w2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#w21 = (w2[0])\n",
+    "#w22 = (w2[1])\n",
+    "#w22 = w22.replace (\"w\",\"W\")\n",
+    "#print (w21,w22)\n",
+    "#type (w21)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "w3 = w3[0].replace (\"w\",\"W\")\n",
+    "print (w3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Wide World\n"
+     ]
+    }
+   ],
+   "source": [
+    "w4 = w4.replace (\"world\", \"World\")\n",
+    "print (w4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4) Ändere *w1*, *w2*, *w3* und *w4* so, dass *world* mit einem Großbuchstaben beginnt. Nutze dafür die Funktion *title()*."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "w1 = 'Hello world'\n",
+    "w2 = ['Hello', 'world']\n",
+    "w3 = ['Hello, world']\n",
+    "w4 = ['Hello', 'wide', 'world']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = 'es funktioniert nicht'\n",
+    "y = x.title ()\n",
+    "print (y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "w10 = w1.title ()\n",
+    "print (w10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "w20 = w2[0],w2[1].title ()\n",
+    "print (w20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "w30 = w3[0].title ()\n",
+    "print (w30)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "w40 = w4[0],w4[1],w4[-1].title ()\n",
+    "print (w40)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "5) Gebe die Liste *order* so aus, dass die Elemente als *python* zu lesen sind. Nutze dazu Indizierung."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "order1 = ['p','x','y','x','t','x','h','x','o','x','n']\n",
+    "order2 = ['x','p','x','y','x','t','x','h','x','o','x','n']\n",
+    "order3 = ['n','x','o','x','h','x','t','x','y','x','p']\n",
+    "#ergebnis = ['p','y','t','h','o','n']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "zz = order1[::2]\n",
+    "print (zz)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "yy = order2[::-2]\n",
+    "print (yy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "celltoolbar": "Slideshow",
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.6"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 1
+}
